--- a/package.json
+++ b/package.json
@@ -3,23 +3,49 @@
   "version": "1.0.0",
   "description": "use webpack5 for react and typescript",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "prod": "webpack"
+    "dev": "webpack-dev-server --config build/webpack.config.ts --mode=development ",
+    "build": "webpack --build --config build/webpack.config.prod.ts"
   },
   "keywords": [
     "webpack5",
     "ts",
     "typescript",
-    "react"
+    "react",
+    "spa"
   ],
   "author": "what4up",
   "license": "MIT",
   "devDependencies": {
-    "cz-conventional-changelog": "3.3.0"
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "autoprefixer": "^9.8.6",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.3.0",
+    "cz-conventional-changelog": "3.3.0",
+    "html-webpack-plugin": "^4.4.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.1",
+    "mini-css-extract-plugin": "^0.11.2",
+    "postcss-loader": "^4.0.1",
+    "style-loader": "^1.2.1",
+    "typescript": "^4.0.2",
+    "webpack": "^5.0.0-beta.30",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.1.4"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
