--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
     "cz-conventional-changelog": "3.3.0",
+    "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.4.1",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
@@ -34,6 +35,7 @@
     "postcss-loader": "^4.0.1",
     "style-loader": "^1.2.1",
     "typescript": "^4.0.2",
+    "url-loader": "^4.1.0",
     "webpack": "^5.0.0-beta.30",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
